--- a/static/ueditor/themes/default/css/ueditor.css
+++ b/static/ueditor/themes/default/css/ueditor.css
@@ -133,7 +133,7 @@ div.edui-box {
 }
 /*UI工具栏、编辑区域、底部*/
 .edui-default .edui-editor {
-    border: 1px solid #d4d4d4;
+    border: 2px solid #000000;
     background-color: white;
     position: relative;
     overflow: visible;
@@ -156,7 +156,7 @@ div.edui-box {
 }
 
 .edui-default .edui-editor-toolbarboxouter {
-    border-bottom: 1px solid #d4d4d4;
+    border-bottom: 2px solid #000000;
     background-color: #fafafa;
     background-image: -moz-linear-gradient(top, #ffffff, #f2f2f2);
     background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), to(#f2f2f2));
@@ -212,7 +212,7 @@ div.edui-box {
 
 .edui-default .edui-editor-bottomContainer td {
     white-space: nowrap;
-    border-top: 1px solid #ccc;
+    border-top: 2px solid #000000;
     line-height: 20px;
     font-size: 12px;
     font-family: Arial, Helvetica, Tahoma, Verdana, Sans-Serif;
